Remove dynamic MediaControlCastButtonElement::shadowPseudoId.

The m_isOverlayButton bit is never set dynamically, and even if it was
it wouldn't work right unless we forced a style recalc at the same time
to make sure we rematched the style with the new pseudo value.

Instead of having this virtual override lets just use the default one
and set the pseudo attribute when the element is created.

BUG=701655

Review-Url: https://codereview.chromium.org/2754523004
Cr-Commit-Position: refs/heads/master@{#457014}

Former-commit-id: 91afacdd96a5d1ca0a0e3235bc62526834a67463